--- a/package.xml
+++ b/package.xml
@@ -5,11 +5,15 @@
   <version>1.0.0</version>
   <maintainer email="projekt@scorpio.pwr.edu.pl">projekt_scorpio</maintainer>
   <license>MIT</license>
+  <exec_depend>message_runtime</exec_depend>
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>roscpp</exec_depend>
-  <exec_depend>rospy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <export>
+  </export>
 </package>
