--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(virtual_dc_motor)
+project(autonomy_simulator)
 
 ## Find catkin macros and libraries
 find_package(catkin REQUIRED COMPONENTS
@@ -11,7 +11,13 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_service_files(
   FILES
-  getMotorJointsLengths.srv
+  GetMap.srv
+)
+
+add_message_files(
+  FILES
+  RoverMap.msg
+  RoverPose.msg
 )
 
 ## Generate added messages and services with any dependencies listed here
@@ -30,11 +36,15 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
   ${catkin_INCLUDE_DIRS}
-  include/virtual_dc_motor
+  include
 )
 
-add_executable(virtual_dc_motor src/virtual_dc_motor.cpp)
+add_executable(autonomy_simulator
+  src/main.cpp
+  src/autonomy_simulator.cpp
+  src/utils.cpp
+)
 
-add_dependencies(virtual_dc_motor ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(autonomy_simulator ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-target_link_libraries(virtual_dc_motor ${catkin_LIBRARIES})
+target_link_libraries(autonomy_simulator ${catkin_LIBRARIES})
